test/arrays/return/returnArbitraryBadDomain.good
returnArbitraryBadDomain.chpl:2: error: halt reached - domain mismatch on return
